--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,22 @@ h3 {
   font-weight: 500;
 }
 
+header .navTop {
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  width: 100vw;
+  background: rgba(250, 250, 250, 0.1);
+  height: 73px;
+}
 header .link a {
   color: #FFFFFF;
   font-weight: 300;
+  margin-left: 20px;
 }
-
 header .link :hover {
   color: #57cbcc;
 }
-
 header .navbar-light .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
@@ -31,17 +38,14 @@ header .navbar-light .navbar-toggler-icon {
   font-size: 80px;
   color: #FFFFFF;
 }
-
 .pic h3 {
   color: #cccccc;
   font-weight: 300;
 }
-
 .pic h6 {
   color: #cccccc;
   font-weight: 300;
 }
-
 .pic .backImage {
   min-height: 100vh;
   width: 100%;
@@ -55,7 +59,6 @@ header .navbar-light .navbar-toggler-icon {
   align-items: center;
   flex-direction: column;
 }
-
 .pic .backImage div.mask {
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
@@ -65,10 +68,9 @@ header .navbar-light .navbar-toggler-icon {
   z-index: -1;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 390px) {
   .pic h1 {
-    font-size: 4rem;
+    font-size: 70px;
+    text-align: center;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
