--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,11 +14,20 @@ h3 {
 }
 
 header {
+    .navTop{
+        position: fixed;
+        top: 0;
+        z-index: 999;
+        width: 100vw;
+        background: rgba(250, 250, 250, 0.1);
+        height: 73px;
+    }
 
     .link {
         a {
             color: #FFFFFF;
             font-weight: 300;
+            margin-left: 20px;
         }
 
         :hover {
