--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ header .link a {
 header .link :hover {
   color: #57cbcc;
 }
+header .link :focus {
+  color: #FFFFFF;
+}
 header .navbar-light .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
